[package]
name = "cismute"
version = "0.1.1"
edition = "2021"
description = "Safely transmute type to itself in generic contexts"
repository = "https://github.com/GoldsteinE/cismute"
license = "BSD-2-Clause-Patent"
keywords = ["transmute", "safe", "specialization"]
categories = ["no-std", "rust-patterns"]
exclude = ["flake.nix", "flake.lock", ".envrc"]

[features]
switch = []
